fix: css overflow in column

--- a/assets/sass/globals.scss
+++ b/assets/sass/globals.scss
@@ -190,6 +190,10 @@ header {
   }
 }
 
+.column {
+  overflow: auto;
+}
+
 .column img {
   width: 100%;
 }
